# Fitness-Tools

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SKILL.md  pyproject.toml  requirements.txt  version.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  release.yml
docs-library/: body-composition.md  meal-planning.md  rep-max.md
fitness_tools/: __init__.py  models.py  types.py  validation.py
fitness_tools/composition/: __init__.py  bodyfat.py
fitness_tools/exercise/: __init__.py  rm_estimator.py
fitness_tools/meals/: __init__.py  meal_maker.py
scripts/: validate-markdown.py  validate-skills.py
site/: astro.config.mjs  package-lock.json  package.json
site/public/: robots.txt
site/scripts/: sync-content.mjs
site/src/components/: SocialIcons.astro
site/src/content/docs/: index.mdx
site/src/styles/: custom.css
skill-references/: equations.md
skills/body-composition/: SKILL.md
skills/body-composition/references/: equations.md
skills/meal-planner/: SKILL.md
skills/meal-planner/references/: macro-tables.md
skills/rep-max/: SKILL.md
skills/rep-max/references/: percentage-table.md
tests/: test_bodyfat_calculator.py  test_meal_maker.py  test_rm_calculator.py  test_types.py  test_validation.py
